Fix login: Add user object to AuthResponse
- Added user field to AuthResponse DTO (backend)
- Updated AuthService to include user info in login and refresh responses
- Updated User interface to match backend (firstLogin instead of mustChangePassword)
- Updated role names to match backend (CUISINE instead of CUISINIER)
- Frontend now receives user info on successful login

Co-authored-by: factory-droid[bot] <138933559+factory-droid[bot]@users.noreply.github.com>